# rust_rest_api_demo

./: .env  Cargo.toml
app/: Cargo.toml
app/src/: lib.rs  main.rs  route.rs  swagger.rs
app/src/controllers/: mod.rs  todo_controller.rs
app/src/db/: mod.rs
app/src/entities/: mod.rs  todo.rs
app/src/entities/entities/: prelude.rs
app/src/models/: mod.rs  paged_list.rs  todo.rs
app/src/utils/: mod.rs  paged_list.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20221105_153204_create_todo_table.rs
