[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4"
sea-orm = { version = "^0", features = [ "sqlx-sqlite", "runtime-actix-native-tls", "macros" ] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15.6"
migration = {path = "../migration"}
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }
utoipa = { version = "3.3.0", features = ["actix_extras"] }

[features]
mock = ["sea-orm/mock"]
